# engines/api/features/api/step_definitions/api_steps.rb
@@ -1,5 +1,5 @@
 When("I access the search API endpoint without any parameters") do
-  visit "/api/blocks/search"
+  visit "/api/blocks"
   @body = JSON.parse(page.source)
 end
 
@@ -21,18 +21,18 @@ And(/^(one|another) block has the following attributes:$/) do |_, table|
 end
 
 When("query the search API endpoint for block type {string}") do |block_type|
-  visit "/api/blocks/search?block_type=#{block_type}"
+  visit "/api/blocks?block_type=#{block_type}"
   @body = JSON.parse(page.source)
 end
 
 When("I query the search API endpoint for the organisation {string}") do |organisation_name|
   organisation = Organisation.all.find { |org| org.name == organisation_name }
-  visit "/api/blocks/search?lead_organisation_id=#{organisation.id}"
+  visit "/api/blocks?lead_organisation_id=#{organisation.id}"
   @body = JSON.parse(page.source)
 end
 
 When("I query the search API endpoint for the keyword {string}") do |keyword|
-  visit "/api/blocks/search?keyword=#{keyword}"
+  visit "/api/blocks?keyword=#{keyword}"
   @body = JSON.parse(page.source)
 end
 
@@ -42,7 +42,7 @@ end
 
 When(/^I query the search API endpoint for the (first|second|third) page of results$/) do |ordinal|
   page_number = { "first" => 1, "second" => 2, "third" => 3 }[ordinal]
-  visit "/api/blocks/search?page=#{page_number}"
+  visit "/api/blocks?page=#{page_number}"
   @body = JSON.parse(page.source)
 end
 
