# engines/api/swagger/v1/swagger.json
@@ -6,7 +6,7 @@
     "description": "The Content Block Manager API allows users to view information about content blocks. It is largely designed\nfor use by the [authoring widget](https://github.com/alphagov/content-block-editor) to allow preview and\nsearch of content blocks.\n\nCurrently, only search is supported, but in the future, we plan to support rendering of content blocks.\n\nAt the moment, the API is read-only, and only supports searching for published content blocks, but in the\nfuture, we may add support for draft content blocks and for creating and updating content blocks, which will\nrequire authentication.\n"
   },
   "paths": {
-    "/blocks/search": {
+    "/blocks": {
       "get": {
         "summary": "Search for content blocks",
         "description": "This endpoint allows you to search for content blocks. You can filter by block type, lead organisation, and\nkeyword, and the results are paginated.\n",
@@ -62,7 +62,7 @@
                   "current_page": 1,
                   "links": [
                     {
-                      "href": "http://www.example.com/api/blocks/search?page=1",
+                      "href": "http://www.example.com/api/blocks?page=1",
                       "rel": "self"
                     }
                   ],
